fix notifications alignment

--- a/src/components/notifications/_datelist.scss
+++ b/src/components/notifications/_datelist.scss
@@ -18,6 +18,7 @@
         line-height: 1.15;
         padding-bottom: 0.6875rem;
         border-bottom: $ironlight solid 1px;
+        margin:0;
     }
 
     &__date-notifications {
